--- a/android/vision-quickstart/app/build.gradle
+++ b/android/vision-quickstart/app/build.gradle
@@ -3,18 +3,21 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.google.mlkit.vision.demo"
         minSdkVersion 19
         multiDexEnabled true
-        targetSdkVersion 31
+        targetSdkVersion 33
 
         versionCode 11
         versionName "1.11"
         vectorDrawables.useSupportLibrary = true
         setProperty("archivesBaseName", "vision-quickstart")
+        ndk {
+            abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
+        }
     }
     buildTypes {
         proguard {
